objects/TASKRAY__trGlobalSettings__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trPublicSiteURL__c</fullName>
        <label>TaskRay Public Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAddContributorsAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contributors Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDayMode__c</fullName>
        <description>Project Schedule options include simple, native, and none. Simple assumes Saturdays and Sundays are non-working days, advanced references Business Hours defined in Salesforce Setup, and none makes every day of the week a working day. For native, schedules defined through Business Hours are connected through the Project Schedule lookup field on projects.</description>
        <inlineHelpText>Determines working and non-working days for scheduling tasks. "None" treats every day as a working day; "simple" sets Saturdays and Sundays as non-working days; "native" allows linking custom business hour schedules and holidays to projects.</inlineHelpText>
        <label>Project Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trChangeItemDebounceDelay__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Batching board transaction delay in ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCommunityTLDOverride__c</fullName>
        <label>TaskRay Community TLD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentageInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trComponentsNavToTRVF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting makes lightning components navigate to the TaskRay Visualforce page instead of record homes.</inlineHelpText>
        <label>Components Nav to TaskRay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trConcurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggles the concurrency feature of TaskRay.</description>
        <inlineHelpText>This toggles TaskRay's checks for updates from other users. Disabling it will have less impact on Salesforce servers, but there may be issues regarding multiple users updating the same tasks.

Default value is "Checked"</inlineHelpText>
        <label>Notification Polling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trContactSupportOverride__c</fullName>
        <label>Override Contact Support link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCreateRepeatInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create repeat tasks in the future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomCSSURL__c</fullName>
        <defaultValue>""</defaultValue>
        <label>trCustomCSSURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDoNotUseConsoleTabNav__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting applies when TaskRay is used in the Console Lightning App and controls how Projects and Tasks are viewed.</inlineHelpText>
        <label>Do not use console tabs for TaskRay Nav</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableDependencyUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Legacy Dependencies (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableMultipleDependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Multiple Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableRecordLockRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry transaction on lock exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableSlackIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Slack Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableTimeTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Time Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludeArchivedFromCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Archived Tasks from Progress %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trGridBuddyURLForProject__c</fullName>
        <defaultValue>"gblite__Grid?gname=Tasks+For+Projects"</defaultValue>
        <label>trGridBuddyURLForProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideContactSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact Support link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideQuipTab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to orgs that have Quip installed.</inlineHelpText>
        <label>Hide Quip from Project and Task modals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsScratchOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, TaskRay will behave properly in a scratch org with the TASKRAY namespace.</description>
        <label>Is Scratch Org? (Bracket Labs Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_1__c</fullName>
        <defaultValue>"#B0B0B0"</defaultValue>
        <label>List Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_2__c</fullName>
        <defaultValue>"#faa732"</defaultValue>
        <label>List Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_3__c</fullName>
        <defaultValue>"#49afcd"</defaultValue>
        <label>List Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDownSharingOnNewProjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Down Sharing on New Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNestedGroupHierarchy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Public group hierarchy query level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNoLockChangeItemUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle off locking for board transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnlyShowOwnersInTeamTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only show task owners in team sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfSortOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of TaskRay Sort Order updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfTRSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of standard TaskRay sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPollingInterval__c</fullName>
        <defaultValue>10.000</defaultValue>
        <description>Sets the polling interval in seconds for Taskray's concurrency feature.</description>
        <inlineHelpText>This value is the interval that TaskRay checks for updates from other users. This value can range from 5 to 99 seconds, with a default value of 10. Higher values reduce Salesforce server impact but increase the time period between update notifications.</inlineHelpText>
        <label>Polling Interval</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab1Label__c</fullName>
        <label>Project Modal Custom Tab 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab1URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the project id for $id in this url</inlineHelpText>
        <label>Project Modal Custom Tab 1 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab2Label__c</fullName>
        <label>Project Modal Custom Tab 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab2URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the project id for $id in this url</inlineHelpText>
        <label>Project Modal Custom Tab 2 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPublicSiteUserId__c</fullName>
        <label>TaskRay Public Site User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsInWorker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run transactions via worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsOnMainThread__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_1__c</fullName>
        <defaultValue>"#c3325f"</defaultValue>
        <label>Task Label Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_2__c</fullName>
        <defaultValue>"#7a43b6"</defaultValue>
        <label>Task Label Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_3__c</fullName>
        <defaultValue>"#216b81"</defaultValue>
        <label>Task Label Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab1Label__c</fullName>
        <label>Task Modal Custom Tab 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab1URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the task id for $id in this url</inlineHelpText>
        <label>Task Modal Custom Tab 1 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab2Label__c</fullName>
        <label>Task Modal Custom Tab 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab2URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the task id for $id in this url</inlineHelpText>
        <label>Task Modal Custom Tab 2 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTasksOnBoardLimit__c</fullName>
        <defaultValue>6000</defaultValue>
        <label>trTasksOnBoardLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeBillableDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to TaskRay Time entries and the default value of the Billable checkbox</inlineHelpText>
        <label>Mark time entries as billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeDisplayTypeField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show the Type field on time entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseDefaultSharingReason__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting does not use the "Added to TaskRay Project Team" sharing reason. Not using this reason allows Tasks to be assigned to a High Volume external user.</inlineHelpText>
        <label>Use default sharing reason (Communities)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseOldCloneProjectModal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use old project clone modal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseSVGPlanViewPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deprecated SVG Printing is no longer supported.</inlineHelpText>
        <label>Use deprecated SVG based Plan View Print</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TaskRay Global Settings</label>
</CustomObject>